fixed alignment issue with related items displaying in event log

--- a/app/server-health/styles/log.scss
+++ b/app/server-health/styles/log.scss
@@ -335,6 +335,7 @@
     font-weight: 700;
     margin-right: 1.2em;
     padding-top: .3em;
+    float: left;
   }
   .event__related-item {
     margin-right: 1em;
